<resources>
    <string name="app_name">Facebookintegrate</string>
    <string name="facebook_app_id">187169165271772</string>
    <string name="fb_login_protocol_scheme">fb187169165271772</string>
    <!--https://termsfeed.com/blog/privacy-policy-url-facebook-app/-->


    <string name="custom_name">Your Name:</string>
    <string name="custom_email">your email:</string>
    <string name="custom_feedback">your message:</string>
    <string name="emailormobileno">Enter Mobile Number</string>
    <string name="otp">Enter OTP</string>
    <string name="fullname">Full Name *</string>
    <string name="emailId">Email address</string>
    <string name="mobileno">Mobile Number*</string>
    <string name="address">Address*</string>
    <string name="Profile">Profile</string>
    <string name="Contact_Number">Contact Number</string>
    <string name="Email_Id">Email Id</string>
    <string name="Address">Address</string>
</resources>
