<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="iniyan.com.facebookintegrate.RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">



    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/fullname"
        android:hint="@string/fullname"
        android:inputType="text"
        app:met_autoValidate="false"
        app:met_bottomTextSize="8dp"
        app:met_clearButton="true"
        app:met_errorColor="@android:color/holo_red_dark"
        app:met_floatingLabel="normal"
        android:textSize="12dp"
        app:met_floatingLabelAlwaysShown="false"
        app:met_floatingLabelAnimating="true"
        app:met_floatingLabelPadding="8dp"
        app:met_floatingLabelText="@string/fullname"
        app:met_floatingLabelTextSize="12dp"
        app:met_helperText=""
        app:met_helperTextAlwaysShown="false"
        app:met_helperTextColor="@android:color/background_dark"
        app:met_iconPadding="8dp"
        app:met_singleLineEllipsis="true"
        app:met_underlineColor="@color/white" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/mobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/mobileno"
            android:hint="@string/mobileno"
            android:inputType="number"
            app:met_autoValidate="false"
            app:met_bottomTextSize="8dp"
            app:met_clearButton="true"
            app:met_errorColor="@android:color/holo_red_dark"
            app:met_floatingLabel="normal"
            android:maxLength="10"
            android:textSize="12dp"
            app:met_floatingLabelAlwaysShown="false"
            app:met_floatingLabelAnimating="true"
            app:met_floatingLabelPadding="8dp"
            app:met_floatingLabelText="@string/mobileno"
            app:met_floatingLabelTextSize="12dp"
            app:met_helperText=""
            app:met_helperTextAlwaysShown="false"
            app:met_helperTextColor="@android:color/background_dark"
            app:met_iconPadding="8dp"
            app:met_singleLineEllipsis="true"
            app:met_underlineColor="@color/white" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/emailid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/emailId"
            android:hint="@string/emailId"
            android:inputType="text"
            app:met_autoValidate="false"
            app:met_bottomTextSize="8dp"
            app:met_clearButton="true"
            app:met_errorColor="@android:color/holo_red_dark"
            app:met_floatingLabel="normal"
            android:textSize="12dp"
            app:met_floatingLabelAlwaysShown="false"
            app:met_floatingLabelAnimating="true"
            app:met_floatingLabelPadding="8dp"
            app:met_floatingLabelText="@string/emailId"
            app:met_floatingLabelTextSize="12dp"
            app:met_helperText=""
            app:met_helperTextAlwaysShown="false"
            app:met_helperTextColor="@android:color/background_dark"
            app:met_iconPadding="8dp"
            app:met_singleLineEllipsis="true"
            app:met_underlineColor="@color/white" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/address"
            android:hint="@string/address"
            android:inputType="text"
            app:met_autoValidate="false"
            app:met_bottomTextSize="8dp"
            app:met_clearButton="true"
            app:met_errorColor="@android:color/holo_red_dark"
            app:met_floatingLabel="normal"
            android:textSize="12dp"
            app:met_floatingLabelAlwaysShown="false"
            app:met_floatingLabelAnimating="true"
            app:met_floatingLabelPadding="8dp"
            app:met_floatingLabelText="@string/address"
            app:met_floatingLabelTextSize="12dp"
            app:met_helperText=""
            app:met_helperTextAlwaysShown="false"
            app:met_helperTextColor="@android:color/background_dark"
            app:met_iconPadding="8dp"
            app:met_singleLineEllipsis="true"
            app:met_underlineColor="@color/white" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:text="Create Account"
            style="@style/Base.TextAppearance.AppCompat.Widget.Button"
            android:textColor="@color/white"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>
