<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff0022"
        android:clipToPadding="false"
        android:elevation="2dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_user_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/Profile"
            android:textColor="#fff" />

        <ImageView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_correct_symbol"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:src="@drawable/ic_edit_1_white"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="#ff0008"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_specialist_userwhite"
            app:civ_border_color="#fff"
            app:civ_border_width="2dp" />


        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Murugan R"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="16dp"
            android:textStyle="bold" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_call_blue" />

                            <TextView
                                android:id="@+id/number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="16dp"
                                android:text="8608951452"
                                android:textColor="#000"
                                android:textSize="10dp" />

                            <EditText
                                android:id="@+id/etnumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="16dp"
                                android:hint="@string/Contact_Number"
                                android:inputType="number"
                                android:maxLength="10"
                                android:textColor="#000"
                                android:textSize="10dp"
                                android:visibility="gone" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="#d4d1d1" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/mail" />

                            <TextView
                                android:id="@+id/email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="16dp"
                                android:text="muruga4046@gmail.com"
                                android:textColor="#000"
                                android:textSize="10dp" />

                            <EditText
                                android:id="@+id/etemail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="16dp"
                                android:hint="@string/Email_Id"
                                android:inputType="textEmailAddress"
                                android:textColor="#000"
                                android:textSize="10dp"
                                android:visibility="gone" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="#d4d1d1" />

                        <LinearLayout
                            android:id="@+id/locationlinear"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_location_blue" />

                            <TextView
                                android:id="@+id/address"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="16dp"
                                android:text="Bangalore"
                                android:textColor="#000"
                                android:textSize="10dp" />

                            <EditText
                                android:id="@+id/etaddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="16dp"
                                android:hint="@string/Address"
                                android:textColor="#000"
                                android:textSize="10dp"
                                android:visibility="gone" />
                        </LinearLayout>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="#d4d1d1" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    android:layout_marginTop="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/stationno"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:src="@drawable/mail" />

                            <TextView
                                android:id="@+id/stationnum"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="16dp"
                                android:text=" "
                                android:textColor="#000"
                                android:textSize="10dp" />

                            <EditText
                                android:id="@+id/Station_num"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="16dp"
                                android:hint="@string/Email_Id"
                                android:textColor="#000"
                                android:textSize="10dp"
                                android:visibility="gone" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="#d4d1d1" />

                        <LinearLayout
                            android:id="@+id/locationlinear1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_location_blue" />

                            <TextView
                                android:id="@+id/address1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="16dp"
                                android:text="Bangalore"
                                android:textColor="#000"
                                android:textSize="10dp" />

                            <EditText
                                android:id="@+id/etaddress1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="16dp"
                                android:hint="@string/Address"
                                android:textColor="#000"
                                android:textSize="10dp"
                                android:visibility="gone" />
                        </LinearLayout>


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="#d4d1d1" />

                        <LinearLayout
                            android:id="@+id/stationll"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_location_blue" />

                            <TextView
                                android:id="@+id/station"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="16dp"
                                android:text=" "
                                android:textColor="#000"
                                android:textSize="10dp" />

                            <EditText
                                android:id="@+id/etstation"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="16dp"
                                android:hint="@string/Address"
                                android:textColor="#000"
                                android:textSize="10dp"
                                android:visibility="gone" />
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
